Added background image overlay to the CTA section. Color and background image changes when a new Tab is clicked. Included jquery.addrule.js to accomplish this. #10

--- a/rbm-about-this-site.html
+++ b/rbm-about-this-site.html
@@ -61,11 +61,17 @@
 <h3><a href="https://github.com/FortAwesome" rel="nofollow">Fort Awesome</a></h3>
 
 <p>
-    This site uses the <a href="https://github.com/FortAwesome/Font-Awesome" rel="nofollow">Font Awesome</a> to include scalable, vector icons that are in use within its design.
+    This site uses <a href="https://github.com/FortAwesome/Font-Awesome" rel="nofollow">Font Awesome</a> to include scalable, vector icons that are in use within its design.
 </p>
 
 <h3><a href="https://github.com/erikflowers" rel="nofollow">Erik Flowers</a></h3>
 
 <p>
-    This site uses the <a href="https://github.com/erikflowers/weather-icons" rel="nofollow">Weather Icons</a> to include more scalable, vector icons that are in use within its design.
+    This site uses <a href="https://github.com/erikflowers/weather-icons" rel="nofollow">Weather Icons</a> to include more scalable, vector icons that are in use within its design.
+</p>
+
+<h3><a href="https://github.com/yckart" rel="nofollow">Yannick Albert</a></h3>
+
+<p>
+    This site uses the <a href="https://gist.github.com/yckart/5563717" rel="nofollow">jQuery Add Rule plugin</a> to allow the targeting non-DOM CSS selectors via JavaScript more easily.
 </p>
