--- a/rbm-about-this-site.html
+++ b/rbm-about-this-site.html
@@ -70,8 +70,8 @@
     This site uses <a href="https://github.com/erikflowers/weather-icons" rel="nofollow">Weather Icons</a> to include more scalable, vector icons that are in use within its design.
 </p>
 
-<h3><a href="https://github.com/yckart" rel="nofollow">Yannick Albert</a></h3>
+<h3><a href="http://dreamerslab.com/" rel="nofollow">DreamersLab</a></h3>
 
 <p>
-    This site uses the <a href="https://gist.github.com/yckart/5563717" rel="nofollow">jQuery Add Rule plugin</a> to allow the targeting non-DOM CSS selectors via JavaScript more easily.
+    This site uses the <a href="http://dreamerslab.com/blog/en/get-hidden-elements-width-and-height-with-jquery/" rel="nofollow">jQuery Actual plugin</a> to allow determining the Height of hidden elements properly.
 </p>
