Added Customizer Controls for Colors within Theme. Converted all Color related styling from SASS to CSS to accomodate this. Included phpColors to replicate functionality. Closes #30

--- a/rbm-about-this-site.html
+++ b/rbm-about-this-site.html
@@ -70,8 +70,8 @@
     This site uses <a href="https://github.com/erikflowers/weather-icons" rel="nofollow">Weather Icons</a> to include more scalable, vector icons that are in use within its design.
 </p>
 
-<h3><a href="http://dreamerslab.com/" rel="nofollow">DreamersLab</a></h3>
+<h3><a href="https://github.com/mexitek" rel="nofollow">Arlo Carreon</a></h3>
 
 <p>
-    This site uses the <a href="http://dreamerslab.com/blog/en/get-hidden-elements-width-and-height-with-jquery/" rel="nofollow">jQuery Actual plugin</a> to allow determining the Height of hidden elements properly.
+    This site uses <a href="https://github.com/mexitek/phpColors" rel="nofollow">phpColors</a> to easily lighten/darken colors within PHP.
 </p>
